--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,116 +1,124 @@
 // ********************
 // ***** Poppins ******
 // ********************
+
+// @font-face {
+//   font-family: Poppins;
+//   font-style: normal;
+//   font-weight: 100;
+//   src: url('~/assets/fonts/poppins/Poppins-Thin.ttf') format('truetype');
+// }
+
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 100;
-  src: url('~/assets/fonts/poppins/Poppins-Thin.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 100;
+    src: url('../fonts/poppins/Poppins-Thin.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 100;
-  src: url('~/assets/fonts/poppins/Poppins-ThinItalic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 100;
+    src: url('../fonts/poppins/Poppins-ThinItalic.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 200;
-  src: url('~/assets/fonts/poppins/Poppins-ExtraLight.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 200;
+    src: url('../fonts/poppins/Poppins-ExtraLight.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 200;
-  src: url('~/assets/fonts/poppins/Poppins-ExtraLightItalic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 200;
+    src: url('../fonts/poppins/Poppins-ExtraLightItalic.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 300;
-  src: url('~/assets/fonts/poppins/Poppins-Light.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins/Poppins-Light.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 300;
-  src: url('~/assets/fonts/poppins/Poppins-LightItalic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 300;
+    src: url('../fonts/poppins/Poppins-LightItalic.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 400;
-  src: url('~/assets/fonts/poppins/Poppins-Regular.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins/Poppins-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 400;
-  src: url('~/assets/fonts/poppins/Poppins-Italic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 400;
+    src: url('../fonts/poppins/Poppins-Italic.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 500;
-  src: url('~/assets/fonts/poppins/Poppins-Medium.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/poppins/Poppins-Medium.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 500;
-  src: url('~/assets/fonts/poppins/Poppins-MediumItalic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 500;
+    src: url('../fonts/poppins/Poppins-MediumItalic.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 600;
-  src: url('~/assets/fonts/poppins/Poppins-SemiBold.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins/Poppins-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 600;
-  src: url('~/assets/fonts/poppins/Poppins-SemiBoldItalic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 600;
+    src: url('../fonts/poppins/Poppins-SemiBoldItalic.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 700;
-  src: url('~/assets/fonts/poppins/Poppins-Bold.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/poppins/Poppins-Bold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 700;
-  src: url('~/assets/fonts/poppins/Poppins-BoldItalic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 700;
+    src: url('../fonts/poppins/Poppins-BoldItalic.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 800;
-  src: url('~/assets/fonts/poppins/Poppins-Black.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 800;
+    src: url('../fonts/poppins/Poppins-Black.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Poppins;
-  font-style: italic;
-  font-weight: 800;
-  src: url('~/assets/fonts/poppins/Poppins-BlackItalic.ttf') format('truetype');
+    font-family: Poppins;
+    font-style: italic;
+    font-weight: 800;
+    src: url('../fonts/poppins/Poppins-BlackItalic.ttf') format('truetype');
 }
 
 // ********************
@@ -118,8 +126,8 @@
 // ********************
 
 @font-face {
-  font-family: Michroma;
-  font-style: normal;
-  font-weight: 400;
-  src: url('~/assets/fonts/michroma/Michroma-Regular.ttf') format('truetype');
+    font-family: Michroma;
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/michroma/Michroma-Regular.ttf') format('truetype');
 }
