--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -1,3 +1,12 @@
+* {
+    transition:
+        background-color 0.3s ease,
+        color 0.3s ease,
+        border-color 0.3s ease,
+        box-shadow 0.3s ease,
+        fill 0.3s ease;
+}
+
 button {
     cursor: pointer;
 }
