--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -47,31 +47,31 @@ $secondary-font-stack:
 // LIGHT-MODE
 [data-theme='light'] {
     // Primary
-    --color-primary: #6eb788;
-    --color-primary-light: #bbddc7;
-    --color-primary-dark: #295137;
+    --color-primary: #7a9ba8;
+    --color-primary-light: #a0b0b8;
+    --color-primary-dark: #5a6a70;
 
     // Accent
-    --color-accent: var(--color-gray5);
-    --color-accent-light: var(--color-gray4);
-    --color-accent-dark: var(--color-gray6);
+    --color-accent: var(--color-gray4);
+    --color-accent-light: var(--color-gray3);
+    --color-accent-dark: var(--color-gray4);
 
     // Background
-    --color-bg-primary: var(--color-gray2);
-    --color-bg-secondary: var(--color-gray4);
+    --color-bg-primary: var(--color-gray4);
+    --color-bg-secondary: var(--color-primary);
 
     // Text
     --color-text-primary: var(--color-gray9);
     --color-text-secondary: var(--color-gray7);
-    --color-text-muted: var(color-gray6);
+    --color-text-muted: var(--color-gray6);
 }
 
 // DARK-MODE
 [data-theme='dark'] {
     // Primary
-    --color-primary: #6eb788;
-    --color-primary-light: #bbddc7;
-    --color-primary-dark: #295137;
+    --color-primary: #7a9ba8;
+    --color-primary-light: #a0b0b8;
+    --color-primary-dark: #5a6a70;
 
     // Accent
     --color-accent: var(--color-gray5);
@@ -85,7 +85,7 @@ $secondary-font-stack:
     // Text
     --color-text-primary: var(--color-gray1);
     --color-text-secondary: var(--color-gray4);
-    --color-text-muted: var(color-gray7);
+    --color-text-muted: var(--color-gray7);
 }
 
 $color-white: var(--color-white);
