--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -4,7 +4,9 @@
         color 0.3s ease,
         border-color 0.3s ease,
         box-shadow 0.3s ease,
-        fill 0.3s ease;
+        fill 0.3s ease,
+        opacity 0.3s ease,
+        transform 0.3s ease;
 }
 
 button {
