feat: added mobile/desktop hover/active class handling mixin and added it to HomeView

--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -73,6 +73,18 @@ $breakpoints: (
     }
 }
 
+@mixin interactive {
+    @media (hover: hover) and (pointer: fine) {
+        &:hover {
+            @content;
+        }
+    }
+
+    &:active {
+        @content;
+    }
+}
+
 // Color variations
 @function lighten-color($color, $percentage) {
     $amount: $percentage;
