refactor(styles): changed dark theme primary-light, added to headers

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -71,7 +71,7 @@ $secondary-font-stack:
 [data-theme='dark'] {
     // Primary
     --color-primary: #6b8f9e;
-    --color-primary-light: #a0b0b8;
+    --color-primary-light: #b2cfd7;
     --color-primary-dark: #5a6a70;
 
     // Accent
