feat: added sass variables for sizing/spacing

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -116,3 +116,21 @@ $color-bg-secondary: var(--color-bg-secondary);
 $color-text-primary: var(--color-text-primary);
 $color-text-secondary: var(--color-text-secondary);
 $color-text-muted: var(--color-text-muted);
+
+// Sizing/Spacers
+$size-1: 0.25em;
+$size-2: 0.5em;
+$size-3: 0.75em;
+$size-4: 1em;
+$size-5: 1.25em;
+$size-6: 1.5em;
+$size-7: 1.75em;
+$size-8: 2em;
+$size-9: 2.5em;
+$size-10: 3em;
+$size-11: 3.5em;
+$size-12: 4em;
+$size-13: 4.5em;
+$size-14: 5em;
+$size-15: 5.5em;
+$size-16: 6em;
