refactor: changed color vars and added 2 sizing/spacing vars

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -63,7 +63,7 @@ $secondary-font-stack:
 
     // Text
     --color-text-primary: var(--color-gray8);
-    --color-text-secondary: var(--color-gray7);
+    --color-text-secondary: var(--color-gray6);
     --color-text-muted: var(--color-gray5);
 }
 
@@ -134,3 +134,5 @@ $size-13: 4.5em;
 $size-14: 5em;
 $size-15: 5.5em;
 $size-16: 6em;
+$size-17: 6.5em;
+$size-18: 7em;
