refactor: Added Inter font to replace Poppins

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -15,6 +15,7 @@ $primary-font-stack:
     'Segoe UI Symbol';
 
 $secondary-font-stack:
+    Inter,
     'Poppins',
     -apple-system,
     blinkmacsystemfont,
