fix: fixed the cards active styles triggering while scrolling

--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -73,15 +73,17 @@ $breakpoints: (
     }
 }
 
-@mixin interactive {
+@mixin interactive($active: true) {
     @media (hover: hover) and (pointer: fine) {
         &:hover {
             @content;
         }
     }
 
-    &:active {
-        @content;
+    @if acitve {
+        &:active {
+            @content;
+        }
     }
 }
 
