fix: fixed the cards active styles triggering while scrolling

--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -73,17 +73,15 @@ $breakpoints: (
     }
 }
 
-@mixin interactive($active: true) {
+@mixin interactive {
     @media (hover: hover) and (pointer: fine) {
         &:hover {
             @content;
         }
     }
 
-    @if acitve {
-        &:active {
-            @content;
-        }
+    &:active {
+        @content;
     }
 }
 
