refactor: changed background color for light-mode

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -60,6 +60,7 @@ $secondary-font-stack:
 
     // background
     --color-bg-primary: var(--color-gray3);
+    --color-bg-primary: #d3e0ed;
     --color-bg-secondary: var(--color-primary);
 
     // text
