fix: added font-size increase for everything on xxl desktops

--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -54,7 +54,7 @@ $breakpoints: (
     }
 }
 
-@mixin bp-xxl-desktop-large {
+@mixin bp-xxl-desktop {
     @media (min-width: map.get($breakpoints, 'xxl')) {
         @content;
     }
