feat: resume page init

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -28,6 +28,19 @@ $secondary-font-stack:
     'Segoe UI Emoji',
     'Segoe UI Symbol';
 
+$ternary-font-stack:
+    'Spartan',
+    -apple-system,
+    blinkmacsystemfont,
+    'Segoe UI',
+    roboto,
+    'Helvetica Neue',
+    arial,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol';
+
 // ---------- colors ----------
 // global
 :root {
