--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,6 +1,6 @@
-// ********************
-// ***** Clash Display ******
-// ********************
+// ***************************
+// ****** Clash Display ******
+// ***************************
 
 @font-face {
     font-family: ClashDisplay;
@@ -69,7 +69,7 @@
 }
 
 // ********************
-// ***** Inter ******
+// ****** Inter *******
 // ********************
 
 @font-face {
@@ -79,10 +79,78 @@
     src: url('../fonts/inter/Inter_18pt-Regular.ttf') format('truetype');
 }
 
+// ********************
+// ***** Spartan ******
+// ********************
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 100;
+    src: url('../fonts/spartan/LeagueSpartan-Thin.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 200;
+    src: url('../fonts/spartan/LeagueSpartan-ExtraLight.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/spartan/LeagueSpartan-Light.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/spartan/LeagueSpartan-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/spartan/LeagueSpartan-Medium.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/spartan/LeagueSpartan-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/spartan/LeagueSpartan-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 800;
+    src: url('../fonts/spartan/LeagueSpartan-ExtraBold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: 900;
+    src: url('../fonts/spartan/LeagueSpartan-Black.ttf') format('truetype');
+}
+
 // **********************************
-// ***** BitCount (Game-Lobby) ******
+// ********** Projects **************
 // **********************************
 
+// ***** BitCount (Game-Lobby) ******
 @font-face {
     font-family: BitCount;
     font-style: normal;
@@ -90,10 +158,7 @@
     src: url('../fonts/projects/BitCount-Regular.ttf') format('truetype');
 }
 
-// *******************************
 // ***** Poppins (Reaction) ******
-// *******************************
-
 @font-face {
     font-family: Poppins;
     font-style: normal;
@@ -101,10 +166,7 @@
     src: url('../fonts/projects/Poppins-LightItalic.ttf') format('truetype');
 }
 
-// ************************************
 // ***** Futura (AlgoVisualizer) ******
-// ************************************
-
 @font-face {
     font-family: Futura;
     font-style: normal;
