refactor: color variable edit

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -51,7 +51,7 @@ $ternary-font-stack:
     --color-gray3: #dee2e6;
     --color-gray4: #ced4da;
     --color-gray5: #adb5bd;
-    --color-gray6: #6c757d;
+    --color-gray6: #575e64;
     --color-gray7: #495057;
     --color-gray8: #343a40;
     --color-gray9: #212529;
