--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -56,6 +56,9 @@ $ternary-font-stack:
     --color-gray8: #343a40;
     --color-gray9: #212529;
     --color-black: #000;
+
+    --color-success: #27ae60;
+    --color-error: #e74c3c;
 }
 
 // light-mode
@@ -115,6 +118,9 @@ $color-gray7: var(--color-gray7);
 $color-gray8: var(--color-gray8);
 $color-gray9: var(--color-gray9);
 $color-black: var(--color-black);
+
+$color-success: var(--color-success);
+$color-error: var(--color-error);
 
 $color-primary: var(--color-primary);
 $color-primary-light: var(--color-primary-light);
