update: updated font for reaction project

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -160,10 +160,10 @@
 
 // ***** Poppins (Reaction) ******
 @font-face {
-    font-family: Poppins;
+    font-family: Autowide;
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/projects/Poppins-LightItalic.ttf') format('truetype');
+    src: url('../fonts/projects/Audiowide-Regular.ttf') format('truetype');
 }
 
 // ***** Futura (AlgoVisualizer) ******
